--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'eclipse-wtp'
 ext {
     springVersion = "4.3.3.RELEASE"
     jacksonVersion = "2.8.3"
+	hibernateVersion = "4.3.5.Final"
 }
 
 repositories {
@@ -16,13 +17,17 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
+	
+	compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.3-1104-jdbc4'
 
 
     compile group: 'org.springframework', name: 'spring-core', version: springVersion
     compile group: 'org.springframework', name: 'spring-web', version: springVersion
     compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
     compile group: 'org.springframework', name: 'spring-context', version: springVersion
-
+    compile group: 'org.springframework', name: 'spring-jdbc', version: springVersion
+    compile group: 'org.springframework', name: 'spring-orm', version: springVersion
 
     testCompile 'junit:junit:4.12'
     providedCompile 'javax.servlet:servlet-api:2.5'
