--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'war'
 //apply plugin: 'jetty' 
 apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 apply plugin: 'eclipse-wtp'
+apply plugin: 'jacoco'
+
 ext {
     springVersion = "4.3.3.RELEASE"
     jacksonVersion = "2.8.3"
@@ -33,3 +35,12 @@ dependencies {
     providedCompile 'javax.servlet:servlet-api:2.5'
     runtime 'javax.servlet:jstl:1.1.2'
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.dependsOn jacocoTestReport
