Filter function can work.

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
 	
-	compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
+	//compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.3.5.Final'
     compile group: 'org.postgresql', name: 'postgresql', version: '9.3-1104-jdbc4'
 
 
@@ -34,6 +35,8 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
     compile group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.7'
+
+    compile group: 'com.github.tennaito', name: 'rsql-jpa', version: '2.0.1'
 
     testCompile 'junit:junit:4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.3.RELEASE'
